--- a/source/references.bib
+++ b/source/references.bib
@@ -1,10 +1,142 @@
-@book{Cousteau1963,
-abstract = {In The Living Sea Jacques Yves Cousteau describes the rich and exciting progress made in exploring life under water by the numerous scientific expeditions which he has been directing since, in his earlier book, The Silent World, he wrote this classic account of man's first experience on the continent below the sea.},
-address = {London},
-author = {{Cousteau Jacques} and {Dugan James}},
-pages = {1--212},
-publisher = {Hamish Hamilton},
-title = {{The Living Sea: by Jacques-Yves Cousteau}},
-type = {Book},
-year = {1963}
+
+@article{dassi_curvature-adapted_2014,
+	title = {Curvature-Adapted Remeshing of {CAD} Surfaces},
+	abstract = {A common representation of surfaces with complicated topology and geometry is through composite parametric surfaces as is the case for most {CAD} modelers. A challenging problem is how to generate a mesh of such a surface that well approximates the geometry of the surface, preserves its topology and important geometric features, and contains nicely shaped elements. In this work, we present an optimization-based surface remeshing method that is able to satisfy many of these requirements simultaneously. This method is inspired by the recent work of Le´vy and Bonneel (Proc. 21th International Meshing Roundtable, October 2012), which embeds a smooth surface into a high-dimensional space and remesh it uniformly in that embedding space. Our method works directly in the 3d spaces and uses an embedding space in R6 to evaluate mesh size and mesh quality. It generates a curvatureadapted anisotropic surface mesh that well represents the geometry of the surface with a low number of elements. We illustrate our approach through various examples.},
+	pages = {13},
+	journaltitle = {Procedia Engineering},
+	author = {Dassi, Franco and Mola, Andrea and Si, Hang},
+	date = {2014},
+	langid = {english},
+	file = {Dassi et al. - 2014 - Curvature-Adapted Remeshing of CAD Surfaces.pdf:/home/tim/Zotero/storage/AZUFKB2N/Dassi et al. - 2014 - Curvature-Adapted Remeshing of CAD Surfaces.pdf:application/pdf}
+}
+
+@book{braess_finite_2013,
+	location = {Berlin},
+	edition = {5., überarb. Aufl},
+	title = {Finite Elemente: Theorie, schnelle Löser und Anwendungen in der Elastizitätstheorie},
+	isbn = {978-3-642-34796-2 978-3-642-34797-9},
+	series = {Springer-Lehrbuch Masterclass},
+	shorttitle = {Finite Elemente},
+	pagetotal = {369},
+	publisher = {Springer Spektrum},
+	author = {Braess, Dietrich},
+	date = {2013},
+	langid = {german},
+	note = {{OCLC}: 827080550},
+	file = {Braess - 2013 - Finite Elemente Theorie, schnelle Löser und Anwen.pdf:/home/tim/Zotero/storage/6TGP3LHF/Braess - 2013 - Finite Elemente Theorie, schnelle Löser und Anwen.pdf:application/pdf}
+}
+
+@incollection{leugering_multi-material_2014,
+	location = {Cham},
+	title = {Multi-material Phase Field Approach to Structural Topology Optimization},
+	volume = {165},
+	isbn = {978-3-319-05082-9 978-3-319-05083-6},
+	url = {http://link.springer.com/10.1007/978-3-319-05083-6_15},
+	abstract = {Multi-material structural topology and shape optimization problems are formulated within a phase ﬁeld approach. First-order conditions are stated and the relation of the necessary conditions to classical shape derivatives are discussed. An efﬁcient numerical method based on an H1–gradient projection method is introduced and ﬁnally several numerical results demonstrate the applicability of the approach.},
+	pages = {231--246},
+	booktitle = {Trends in {PDE} Constrained Optimization},
+	publisher = {Springer International Publishing},
+	author = {Blank, Luise and Farshbaf-Shaker, M. Hassan and Garcke, Harald and Rupprecht, Christoph and Styles, Vanessa},
+	editor = {Leugering, Günter and Benner, Peter and Engell, Sebastian and Griewank, Andreas and Harbrecht, Helmut and Hinze, Michael and Rannacher, Rolf and Ulbrich, Stefan},
+	urldate = {2019-08-11},
+	date = {2014},
+	langid = {english},
+	doi = {10.1007/978-3-319-05083-6_15},
+	file = {Blank et al. - 2014 - Multi-material Phase Field Approach to Structural .pdf:/home/tim/Zotero/storage/5G99PFUW/Blank et al. - 2014 - Multi-material Phase Field Approach to Structural .pdf:application/pdf}
+}
+
+@inproceedings{carr_reconstruction_2001,
+	location = {Not Known},
+	title = {Reconstruction and representation of 3D objects with radial basis functions},
+	isbn = {978-1-58113-374-5},
+	url = {http://portal.acm.org/citation.cfm?doid=383259.383266},
+	doi = {10.1145/383259.383266},
+	abstract = {We use polyharmonic Radial Basis Functions ({RBFs}) to reconstruct smooth, manifold surfaces from point-cloud data and to repair incomplete meshes. An object’s surface is deﬁned implicitly as the zero set of an {RBF} ﬁtted to the given surface data. Fast methods for ﬁtting and evaluating {RBFs} allow us to model large data sets, consisting of millions of surface points, by a single {RBF}—previously an impossible task. A greedy algorithm in the ﬁtting process reduces the number of {RBF} centers required to represent a surface and results in signiﬁcant compression and further computational advantages. The energy-minimisation characterisation of polyharmonic splines result in a “smoothest” interpolant. This scale-independent characterisation is well-suited to reconstructing surfaces from nonuniformly sampled data. Holes are smoothly ﬁlled and surfaces smoothly extrapolated. We use a non-interpolating approximation when the data is noisy. The functional representation is in effect a solid model, which means that gradients and surface normals can be determined analytically. This helps generate uniform meshes and we show that the {RBF} representation has advantages for mesh simpliﬁcation and remeshing applications. Results are presented for real-world rangeﬁnder data.},
+	eventtitle = {the 28th annual conference},
+	pages = {67--76},
+	booktitle = {Proceedings of the 28th annual conference on Computer graphics and interactive techniques  - {SIGGRAPH} '01},
+	publisher = {{ACM} Press},
+	author = {Carr, J. C. and Beatson, R. K. and Cherrie, J. B. and Mitchell, T. J. and Fright, W. R. and {McCallum}, B. C. and Evans, T. R.},
+	urldate = {2019-08-31},
+	date = {2001},
+	langid = {english},
+	file = {Carr et al. - 2001 - Reconstruction and representation of 3D objects wi.pdf:/home/tim/Zotero/storage/DP4GYE5N/Carr et al. - 2001 - Reconstruction and representation of 3D objects wi.pdf:application/pdf}
+}
+
+@article{bossen_pliant_nodate,
+	title = {A Pliant Method for Anisotropic Mesh Generation},
+	abstract = {A new algorithm for the generation of anisotropic, unstructured triangular meshes in two dimensions is described. Inputs to the algorithm are the boundary geometry and a metric that speciﬁes the desired element size and shape as a function of position. The algorithm is an example of what we call pliant mesh generation. It ﬁrst constructs the constrained Delaunay triangulation of the domain, then iteratively smooths, reﬁnes, and retriangulates. On each iteration, a node is selected at random, it is repositioned according to attraction/repulsion with its neighbors, the neighborhood is retriangulated, and nodes are inserted or deleted as necessary. All operations are done relative to the metric tensor. This simple method generates high quality meshes whose elements conform well to the requested shape metric. The method appears particularly well suited to surface meshing and viscous ﬂow simulations, where stretched triangles are desirable, and to time-dependent remeshing problems.},
+	pages = {12},
+	author = {Bossen, Frank J and Heckbert, Paul S},
+	langid = {english},
+	file = {Bossen und Heckbert - A Pliant Method for Anisotropic Mesh Generation.pdf:/home/tim/Zotero/storage/HR4WRSA3/Bossen und Heckbert - A Pliant Method for Anisotropic Mesh Generation.pdf:application/pdf}
+}
+
+@article{zhu_compactly_2012,
+	title = {{COMPACTLY} {SUPPORTED} {RADIAL} {BASIS} {FUNCTIONS}: {HOW} {AND} {WHY}?},
+	abstract = {The use of radial basis functions have attracted increasing attention in recent years as an elegant scheme for high-dimensional scattered data approximation, an practical method for machine learning, one of the foundations of mesh-free methods, an alternative way to construct higher order methods for solving partial diﬀerential equations ({PDEs}), an emerging method for solving {PDEs} on surfaces, a novel method for mesh repair and so on. All these applications share one mathematical foundation: high dimensional approximation/interpolation. This paper explains why radial basis functions are preferred to multi-variate polynomials for scattered data approximation in high-dimensional space; and gives a brief description on how to construct the most commonly used compactly supported radial basis functions. Without sophisticated mathematics, one can construct a compactly supported (radial) basis function with required smoothness according to procedures described here. Short programs and tables for compactly supported radial basis functions are supplied.},
+	pages = {12},
+	author = {Zhu, Sheng-Xin},
+	date = {2012},
+	langid = {english},
+	file = {Zhu - 2012 - COMPACTLY SUPPORTED RADIAL BASIS FUNCTIONS HOW AN.pdf:/home/tim/Zotero/storage/WLPMFDYA/Zhu - 2012 - COMPACTLY SUPPORTED RADIAL BASIS FUNCTIONS HOW AN.pdf:application/pdf}
+}
+
+@article{schaback_practical_nodate,
+	title = {A Practical Guide to Radial Basis Functions},
+	pages = {58},
+	author = {Schaback, R},
+	langid = {english},
+	file = {Schaback - A Practical Guide to Radial Basis Functions.pdf:/home/tim/Zotero/storage/Z3ND6KBA/Schaback - A Practical Guide to Radial Basis Functions.pdf:application/pdf}
+}
+
+@article{bozzini_interpolation_nodate,
+	title = {Interpolation by Basis Functions of Diﬀerent Scales and Shapes},
+	abstract = {Under very mild additional assumptions, translates of conditionally positive deﬁnite radial basis functions allow unique interpolation to scattered multivariate data, because the interpolation matrices have a symmetric and positive deﬁnite dominant part. In many applications, the data density varies locally, and then the translates should get diﬀerent scalings that match the local data density. Furthermore, if there is a local anisotropy in the data, the radial basis functions should be distorted into functions with ellipsoids as level sets. In such cases, the symmetry and the deﬁniteness of the matrices are lost. However, this paper provides suﬃcient conditions for the unique solvability of such interpolation processes. The basic technique is a matrix perturbation argument combined with the Ball–Narcowich–Ward stability results.},
+	pages = {11},
+	author = {Bozzini, M and Lenarduzzi, L and Rossini, M and Schaback, R},
+	langid = {english},
+	file = {Bozzini et al. - Interpolation by Basis Functions of Diﬀerent Scale.pdf:/home/tim/Zotero/storage/EW3EVZJB/Bozzini et al. - Interpolation by Basis Functions of Diﬀerent Scale.pdf:application/pdf}
+}
+
+@article{buhmann_radial_nodate,
+	title = {Radial Basis Functions: Theory and Implementations},
+	pages = {271},
+	author = {Buhmann, M D},
+	langid = {english},
+	file = {Buhmann - Radial Basis Functions Theory and Implementations.pdf:/home/tim/Zotero/storage/YCKWE2B2/Buhmann - Radial Basis Functions Theory and Implementations.pdf:application/pdf}
+}
+
+@article{treece_regularised_1999,
+	title = {Regularised marching tetrahedra: improved iso-surface extraction},
+	volume = {23},
+	issn = {00978493},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S009784939900076X},
+	doi = {10.1016/S0097-8493(99)00076-X},
+	shorttitle = {Regularised marching tetrahedra},
+	pages = {583--598},
+	number = {4},
+	journaltitle = {Computers \& Graphics},
+	shortjournal = {Computers \& Graphics},
+	author = {Treece, G.M. and Prager, R.W. and Gee, A.H.},
+	urldate = {2019-08-31},
+	date = {1999-08},
+	langid = {english},
+	file = {Treece et al. - 1999 - Regularised marching tetrahedra improved iso-surf.pdf:/home/tim/Zotero/storage/2IN57CWU/Treece et al. - 1999 - Regularised marching tetrahedra improved iso-surf.pdf:application/pdf}
+}
+
+@article{noauthor_wendland1995.ps_nodate,
+	title = {wendland1995.ps},
+	doi = {https://doi.org/10.1007/BF02123482},
+	file = {wendland1995.ps:/home/tim/Zotero/storage/8JLIDFZ5/wendland1995.ps:application/postscript}
+}
+
+@article{wendland_piecewise_1995,
+	title = {Piecewise polynomial, positive definite and compactly supported radial functions of minimal degree},
+	volume = {4},
+	pages = {389--396},
+	journaltitle = {Advances in Computational Mathematics},
+	author = {Wendland, Holger},
+	date = {1995},
+	file = {wendland1995.ps:/home/tim/Zotero/storage/LL8RS2SK/wendland1995.ps:application/postscript}
 }
