--- a/style/template.tex
+++ b/style/template.tex
@@ -1,4 +1,4 @@
-\documentclass[$if(fontsize)$$fontsize$,$endif$$if(lang)$$lang$,$endif$$if(papersize)$$papersize$,$endif$$for(classoption)$$classoption$$sep$,$endfor$]{$documentclass$}
+   \documentclass[$if(fontsize)$$fontsize$,$endif$$if(lang)$$lang$,$endif$$if(papersize)$$papersize$,$endif$$for(classoption)$$classoption$$sep$,$endfor$]{$documentclass$}
 $if(fontfamily)$
 \usepackage{$fontfamily$}
 $else$
@@ -10,7 +10,7 @@ $endif$
 \let\origfigure=\figure
 \let\endorigfigure=\endfigure
 \renewenvironment{figure}[1][]{%
-\origfigure[b]
+\origfigure[H]
 }{%
 \endorigfigure
 }
@@ -22,6 +22,7 @@ $endif$
 % TP: hack to truncate list of figures/tables.
 \usepackage{truncate}
 \usepackage{caption}
+\usepackage{svg}
 \usepackage{tocloft}
 % TP: end hack
 
@@ -151,6 +152,7 @@ $if(lang)$
   \usepackage[$lang$]{babel}
 \fi
 $endif$
+
 
 $if(title)$
 \title{$title$$if(subtitle)$\\\vspace{0.5em}{\large $subtitle$}$endif$}
