--- a/style/preamble.tex
+++ b/style/preamble.tex
@@ -125,6 +125,13 @@
 \newcolumntype{x}[1]{%
 >{\centering\arraybackslash}m{#1}}%
 
+% exchange vec to just make 
+\let\oldhat\hat
+\renewcommand{\vec}[1]{\mathbf{#1}}
+\renewcommand{\hat}[1]{\oldhat{\mathbf{#1}}}
+
+% turn on page numbering
+
 % Allow for long captions and float captions on opposite page of figures
 % \usepackage[rightFloats, CaptionBefore]{fltpage}
 
