--- a/source/references.bib
+++ b/source/references.bib
@@ -140,3 +140,34 @@
 	date = {1995},
 	file = {wendland1995.ps:/home/tim/Zotero/storage/LL8RS2SK/wendland1995.ps:application/postscript}
 }
+
+@inproceedings{taubin_curve_1995,
+	title = {Curve and surface smoothing without shrinkage},
+	doi = {10.1109/ICCV.1995.466848},
+	abstract = {For a number of computational purposes, including visualization of scientific data and registration of multimodal medical data, smooth curves must be approximated by polygonal curves, and surfaces by polyhedral surfaces. An inherent problem of these approximation algorithms is that the resulting curves and surfaces appear faceted. Boundary-following and iso-surface construction algorithms are typical examples. To reduce the apparent faceting, smoothing methods are used. In this paper, we introduce a new method for smoothing piecewise linear shapes of arbitrary dimension and topology. This new method is in fact a linear low-pass filter that removes high-curvature variations, and does not produce shrinkage. Its computational complexity is linear in the number of edges or faces of the shape, and the required storage is linear in the number of vertices.{\textless}{\textgreater}},
+	eventtitle = {Proceedings of {IEEE} International Conference on Computer Vision},
+	pages = {852--857},
+	booktitle = {Proceedings of {IEEE} International Conference on Computer Vision},
+	author = {Taubin, G.},
+	date = {1995-06},
+	keywords = {approximation algorithms, Approximation algorithms, boundary-following algorithms, computational complexity, Computational complexity, computational geometry, computer vision, curve fitting, curve smoothing, data visualisation, Data visualization, edges, faces, faceting, high curvature variations, image registration, iso-surface construction algorithms, linear low-pass filter, Low pass filters, medical image processing, multimodal medical data registration, Nonlinear filters, Piecewise linear approximation, piecewise linear shapes, Piecewise linear techniques, piecewise-linear techniques, polygonal curves, polyhedral surfaces, required storage, scientific data visualization, Shape, shrinkage, smoothing methods, Smoothing methods, surface smoothing, topology, Topology, vertices},
+	file = {IEEE Xplore Abstract Record:/home/tim/Zotero/storage/SAHILYLS/466848.html:text/html;taubin-smoothing.pdf.pdf:/home/tim/Zotero/storage/BMQYBYBS/taubin-smoothing.pdf.pdf:application/pdf}
+}
+
+@article{philippe_ciarlet_mathematical_1990,
+	title = {Mathematical elasticity, volume I: Three-dimensional elasticity},
+	volume = {18},
+	issn = {1572-9036},
+	url = {https://doi.org/10.1007/BF00046568},
+	doi = {10.1007/BF00046568},
+	shorttitle = {Mathematical elasticity, volume I},
+	pages = {190--195},
+	number = {2},
+	journaltitle = {Acta Applicandae Mathematica},
+	shortjournal = {Acta Appl Math},
+	author = {Philippe G. Ciarlet},
+	urldate = {2019-09-29},
+	date = {1990-02-01},
+	langid = {english},
+	file = {Mathematical-Elasticity-Volume-I-Three-Dimensional-Elasticity.pdf:/home/tim/Downloads/master/Mathematical-Elasticity-Volume-I-Three-Dimensional-Elasticity.pdf:application/pdf}
+}
