latest and greatest

--- a/source/references.bib
+++ b/source/references.bib
@@ -165,9 +165,74 @@
 	number = {2},
 	journaltitle = {Acta Applicandae Mathematica},
 	shortjournal = {Acta Appl Math},
-	author = {Philippe G. Ciarlet},
+	author = {Philippe Ciarlet},
 	urldate = {2019-09-29},
 	date = {1990-02-01},
 	langid = {english},
 	file = {Mathematical-Elasticity-Volume-I-Three-Dimensional-Elasticity.pdf:/home/tim/Downloads/master/Mathematical-Elasticity-Volume-I-Three-Dimensional-Elasticity.pdf:application/pdf}
+}
+
+@article{barles_front_1993,
+	title = {Front Propagation and Phase Field Theory},
+	volume = {31},
+	issn = {0363-0129},
+	url = {https://epubs.siam.org/doi/abs/10.1137/0331021},
+	doi = {10.1137/0331021},
+	abstract = {The connection between the weak theories for a class of geometric equations and the asymptotics of appropriately rescaled reaction-diffusion equations is rigorously established. Two different scalings are studied. In the first, the limiting geometric equation is a first-order equation; in the second, it is a generalization of the mean curvature equation. Intrinsic definitions for the geometric equations are obtained, and uniqueness under a geometric condition on the initial surface is proved. In particular, in the case of the mean curvature equation, this condition is satisfied by surfaces that are strictly starshaped, that have positive mean curvature, or that satisfy a condition that interpolates between the positive mean curvature and the starshape conditions.},
+	pages = {439--469},
+	number = {2},
+	journaltitle = {{SIAM} Journal on Control and Optimization},
+	shortjournal = {{SIAM} J. Control Optim.},
+	author = {Barles, G. and Soner, H. and Souganidis, P.},
+	urldate = {2019-10-05},
+	date = {1993-03-01},
+	file = {Front_Propagation_and_Phase_Field_Theory.pdf:/home/tim/Zotero/storage/237AD72W/Front_Propagation_and_Phase_Field_Theory.pdf:application/pdf;Snapshot:/home/tim/Zotero/storage/972MGPSY/0331021.html:text/html}
+}
+
+@online{blank_phase-field_2010,
+	title = {Phase-field approaches to structural topology optimization},
+	rights = {https://epub.uni-regensburg.de/licenses/lic\_without\_pod.html},
+	url = {https://epub.uni-regensburg.de/14656/},
+	abstract = {The mean compliance minimization in structural topology optimization is solved with the help of a phase field approach. Two steepest descent approaches based on L2- and H-1 gradient flow dynamics are discussed.
+The resulting flows are given by Allen-Cahn and Cahn-Hilliard type dynamics coupled to a linear elasticity system. We finally compare numerical results obtained from the two different approaches.},
+	type = {info:eu-repo/semantics/report},
+	author = {Blank, Luise and Garcke, Harald and Sarbu, Lavinia and Srisupattarawanit, Tarin and Styles, Vanessa and Voigt, Axel},
+	urldate = {2019-10-05},
+	date = {2010},
+	langid = {english},
+	file = {Full Text PDF:/home/tim/Zotero/storage/C8HWQ4WY/Blank et al. - 2010 - Phase-field approaches to structural topology opti.pdf:application/pdf;Snapshot:/home/tim/Zotero/storage/I43NAIUY/14656.html:text/html}
+}
+
+@article{blank_relating_2014,
+	title = {Relating phase field and sharp interface approaches to structural topology optimization},
+	volume = {20},
+	rights = {nat\_lic},
+	issn = {1262-3377 (online)},
+	url = {https://epub.uni-regensburg.de/34578/},
+	abstract = {A phase field approach for structural topology optimization which allows for topology changes and multiple materials is analyzed. First order optimality conditions are rigorously derived and it is shown via formally matched asymptotic expansions that these conditions converge to classical first order conditions obtained in the context of shape calculus. We also discuss how to deal with triple junctions where e.g. two materials and the void meet. Finally, we present several numerical results for mean compliance problems and a cost involving the least square error to a target displacement.},
+	pages = {1025--1058},
+	journaltitle = {Control, Optimisation and Calculus of Variations ({ESAIM}-{COCV})},
+	author = {Blank, Luise and Garcke, Harald and Farshbaf-Shaker, Hassan and Styles, Vanessa},
+	urldate = {2019-10-05},
+	date = {2014},
+	langid = {english},
+	file = {Full Text PDF:/home/tim/Zotero/storage/CG4NIIHJ/Blank et al. - 2014 - Relating phase field and sharp interface approache.pdf:application/pdf;Snapshot:/home/tim/Zotero/storage/U68748PA/34578.html:text/html}
+}
+
+@article{takezawa_shape_2010,
+	title = {Shape and topology optimization based on the phase field method and sensitivity analysis},
+	volume = {229},
+	issn = {0021-9991},
+	url = {http://www.sciencedirect.com/science/article/pii/S0021999109006962},
+	doi = {10.1016/j.jcp.2009.12.017},
+	abstract = {This paper discusses a structural optimization method that optimizes shape and topology based on the phase field method. The proposed method has the same functional capabilities as a structural optimization method based on the level set method incorporating perimeter control functions. The advantage of the method is the simplicity of computation, since extra operations such as re-initialization of functions are not required. Structural shapes are represented by the phase field function defined in the design domain, and optimization of this function is performed by solving a time-dependent reaction diffusion equation. The artificial double well potential function used in the equation is derived from sensitivity analysis. The proposed method is applied to two-dimensional linear elastic and vibration optimization problems such as the minimum compliance problem, a compliant mechanism design problem and the eigenfrequency maximization problem. The numerical examples provided illustrate the convergence of the various objective functions and the effect that perimeter control has on the optimal configurations.},
+	pages = {2697--2718},
+	number = {7},
+	journaltitle = {Journal of Computational Physics},
+	shortjournal = {Journal of Computational Physics},
+	author = {Takezawa, Akihiro and Nishiwaki, Shinji and Kitamura, Mitsuru},
+	urldate = {2019-10-05},
+	date = {2010-04-01},
+	keywords = {Level set method, Phase field method, Sensitivity analysis, Shape optimization, Topology optimization},
+	file = {Eingereichte Version:/home/tim/Zotero/storage/Q7CLITIH/Takezawa et al. - 2010 - Shape and topology optimization based on the phase.pdf:application/pdf;ScienceDirect Snapshot:/home/tim/Zotero/storage/VEBPB3AG/S0021999109006962.html:text/html}
 }
