--- a/source/references.bib
+++ b/source/references.bib
@@ -189,13 +189,12 @@
 	file = {Front_Propagation_and_Phase_Field_Theory.pdf:/home/tim/Zotero/storage/237AD72W/Front_Propagation_and_Phase_Field_Theory.pdf:application/pdf;Snapshot:/home/tim/Zotero/storage/972MGPSY/0331021.html:text/html}
 }
 
-@online{blank_phase-field_2010,
+@article{blank_phase-field_2010,
 	title = {Phase-field approaches to structural topology optimization},
 	rights = {https://epub.uni-regensburg.de/licenses/lic\_without\_pod.html},
 	url = {https://epub.uni-regensburg.de/14656/},
 	abstract = {The mean compliance minimization in structural topology optimization is solved with the help of a phase field approach. Two steepest descent approaches based on L2- and H-1 gradient flow dynamics are discussed.
 The resulting flows are given by Allen-Cahn and Cahn-Hilliard type dynamics coupled to a linear elasticity system. We finally compare numerical results obtained from the two different approaches.},
-	type = {info:eu-repo/semantics/report},
 	author = {Blank, Luise and Garcke, Harald and Sarbu, Lavinia and Srisupattarawanit, Tarin and Styles, Vanessa and Voigt, Axel},
 	urldate = {2019-10-05},
 	date = {2010},
@@ -235,4 +234,54 @@ The resulting flows are given by Allen-Cahn and Cahn-Hilliard type dynamics coup
 	date = {2010-04-01},
 	keywords = {Level set method, Phase field method, Sensitivity analysis, Shape optimization, Topology optimization},
 	file = {Eingereichte Version:/home/tim/Zotero/storage/Q7CLITIH/Takezawa et al. - 2010 - Shape and topology optimization based on the phase.pdf:application/pdf;ScienceDirect Snapshot:/home/tim/Zotero/storage/VEBPB3AG/S0021999109006962.html:text/html}
+}
+
+@online{noauthor_optimal_nodate,
+	title = {Optimal Control of Partial Differential Equations: Theory, Methods and Applications},
+	url = {https://bookstore.ams.org/gsm-112},
+	urldate = {2019-10-06},
+	file = {Optimal Control of Partial Differential Equations\: Theory, Methods and Applications:/home/tim/Zotero/storage/F6ENXZTD/gsm-112.html:text/html}
+}
+
+@book{troltzsch_optimale_2009,
+	edition = {2},
+	title = {Optimale Steuerung partieller Differentialgleichungen: Theorie, Verfahren und Anwendungen},
+	isbn = {978-3-8348-0885-1},
+	url = {https://www.springer.com/de/book/9783834808851},
+	shorttitle = {Optimale Steuerung partieller Differentialgleichungen},
+	abstract = {Die mathematische Theorie der optimalen Steuerung hat sich im Zusammenhang mit Berechnungen für die Luft- und Raumfahrt schnell zu einem wichtigen und eigenständigen Gebiet der angewandten Mathematik entwickelt. Die optimale Steuerung durch partielle Differentialgleichungen modellierter Prozesse wird eine numerische Herausforderung der Zukunft sein. Im Buch werden entsprechende Grundlagen mit langsam steigendem Schwierigkeitsgrad entwickelt. Es enthält viele Beispiele und eignet sich als Grundlage für Vorlesungen und Seminare. Der Text wurde für die 2. Auflage grundlegend überarbeitet. Die Darstellung der numerischen Methoden orientiert sich stärker an den konkret zu rechnenden Systemen. Neueste Ergebnisse zur maximalen Regularität parabolischer Differentialgleichungen sind eingearbeitet. Lösungshinweise zu den Übungsaufgaben findet der Studierende nun im {OnlinePLUS}-Service des Verlages. Beispiele von Optimalsteuerungsproblemen - Grundlagen linearer elliptischer und parabolischer Gleichungen - konvexe und nichtkonvexe Aufgaben der Optimalsteuerung - adjungierte Gleichungen und notwendige Optimalitätsbedingungen - Lagrange-Prinzip - hinreichende Optimalitätsbedingungen zweiter Ordnung - Testbeispiele - numerische Techniken - Kuhn-Tucker-Theorie im Funktionenraum - Zustandsbeschränkungen - beschränkte Lösungen semilinearer partieller Differentialgleichungen - Studierende der Mathematik, Technomathematik, Wirtschaftsmathematik ab dem 5. Semester - Mathematiker mit Interesse an den Gebieten Optimalsteuerung, nichtlineare Optimierung, Numerik partieller Differentialgleichungen Prof. Dr. Fredi Tröltzsch, Institut für Mathematik, Technische Universität Berlin},
+	publisher = {Vieweg+Teubner Verlag},
+	author = {Tröltzsch, Fredi},
+	urldate = {2019-10-06},
+	date = {2009},
+	langid = {german},
+	file = {Snapshot:/home/tim/Zotero/storage/WTVERWGU/9783834808851.html:text/html;Tröltzsch-OptPDE.pdf:/home/tim/Downloads/Opti_PDE/Tröltzsch-OptPDE.pdf:application/pdf}
+}
+
+@inproceedings{dassi_novel_2016,
+	title = {A novel surface remeshing scheme via higher dimensional embedding and radial basis functions},
+	abstract = {Many applications heavily rely on piecewise triangular meshes to describe complex surface geometries. High-quality meshes significantly improve numerical simulations. In practice, however, one often has to deal with several challenges. Some regions in the initial mesh may be overrefined, others too coarse. Additionally, the triangles may be too thin or not properly oriented. We present a novel mesh adaptation procedure which greatly improves the problematic input mesh and overcomes all of these drawbacks. By coupling surface reconstruction via radial basis functions with the higher dimensional embedding surface remeshing technique, we can automatically generate anisotropic meshes. Moreover, we are not only able to fill or coarsen certain mesh regions but also align the triangles according to the curvature of the reconstructed surface. This yields an acceptable trade-off between computational complexity and accuracy.},
+	author = {Dassi, Franco and Farrell, Patricio and Si, Hang},
+	date = {2016},
+	keywords = {Algorithm, Align (company), Computational complexity theory, Computer graphics (computer science), Computer simulation, Discrete mathematics, Embedding, Enriques–Kodaira classification, Level of detail, Numerical analysis, Polygon mesh, Radial (radio), Radial basis function, Real life, Triangle mesh},
+	file = {Full Text PDF:/home/tim/Zotero/storage/ZS7IMV49/Dassi et al. - 2016 - A novel surface remeshing scheme via higher dimens.pdf:application/pdf}
+}
+
+@article{micchelli_interpolation_1986,
+	title = {Interpolation of scattered data: Distance matrices and conditionally positive definite functions},
+	volume = {2},
+	issn = {1432-0940},
+	url = {https://doi.org/10.1007/BF01893414},
+	doi = {10.1007/BF01893414},
+	shorttitle = {Interpolation of scattered data},
+	abstract = {Among other things, we prove that multiquadric surface interpolation is always solvable, thereby settling a conjecture of R. Franke.},
+	pages = {11--22},
+	number = {1},
+	journaltitle = {Constructive Approximation},
+	shortjournal = {Constr. Approx},
+	author = {Micchelli, Charles A.},
+	urldate = {2019-10-15},
+	date = {1986-12-01},
+	langid = {english},
+	keywords = {41A05, 41A63, Multiquadric surface, Multivariate interpolation, Positive definite functions, Thin plate splines}
 }
