--- a/style/preamble.tex
+++ b/style/preamble.tex
@@ -44,6 +44,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{listings}
 \usepackage{color}
+\usepackage[ruled,vlined,linesnumbered]{algorithm2e}
 
 % JAVA CODE BLOCKS
 \definecolor{backcolour}{RGB}{242,242,242}
