--- a/source/references.bib
+++ b/source/references.bib
@@ -103,8 +103,7 @@
 	title = {Radial Basis Functions: Theory and Implementations},
 	pages = {271},
 	author = {Buhmann, M D},
-	langid = {english},
-	file = {Buhmann - Radial Basis Functions Theory and Implementations.pdf:/home/tim/Zotero/storage/YCKWE2B2/Buhmann - Radial Basis Functions Theory and Implementations.pdf:application/pdf}
+	langid = {english}
 }
 
 @article{treece_regularised_1999,
@@ -169,7 +168,7 @@
 	urldate = {2019-09-29},
 	date = {1990-02-01},
 	langid = {english},
-	file = {Mathematical-Elasticity-Volume-I-Three-Dimensional-Elasticity.pdf:/home/tim/Downloads/master/Mathematical-Elasticity-Volume-I-Three-Dimensional-Elasticity.pdf:application/pdf}
+	file = {Mathematical-Elasticity-Volume-I-Three-Dimensional-Elasticity.pdf:/home/tim/Downloads/master/elasticity/Mathematical-Elasticity-Volume-I-Three-Dimensional-Elasticity.pdf:application/pdf}
 }
 
 @article{barles_front_1993,
@@ -284,4 +283,80 @@ The resulting flows are given by Allen-Cahn and Cahn-Hilliard type dynamics coup
 	date = {1986-12-01},
 	langid = {english},
 	keywords = {41A05, 41A63, Multiquadric surface, Multivariate interpolation, Positive definite functions, Thin plate splines}
+}
+
+@inproceedings{taubin_curve_1995-1,
+	title = {Curve and Surface Smoothing Without Shrinkage},
+	isbn = {978-0-8186-7042-8},
+	doi = {10.1109/ICCV.1995.466848},
+	abstract = {For a number of computational purposes, including visualization of scientific data and registration of multimodal medical data, smooth curves must be approximated by polygonal curves, and surfaces by polyhedral surfaces. An inherent problem of these approximation algorithms is that the resulting curves and surfaces appear faceted. Boundary-following and iso-surface construction algorithms are typical examples. To reduce the apparent faceting, smoothing methods are used. In this paper, we introduce a new method for smoothing piecewise linear shapes of arbitrary dimension and topology. This new method is in fact a linear low-pass filter that removes high-curvature variations, and does not produce shrinkage. Its computational complexity is linear in the number of edges or faces of the shape, and the required storage is linear in the number of vertices},
+	eventtitle = {{IEEE} International Conference on Computer Vision},
+	pages = {852--857},
+	author = {Taubin, Gabriel},
+	date = {1995-07-20},
+	file = {Full Text PDF:/home/tim/Zotero/storage/AB37KQCY/Taubin - 1995 - Curve and Surface Smoothing Without Shrinkage.pdf:application/pdf}
+}
+
+@article{bourdin_design-dependent_2003,
+	title = {Design-dependent loads in topology optimization},
+	volume = {9},
+	rights = {© {EDP} Sciences, {SMAI}, 2003},
+	issn = {1292-8119, 1262-3377},
+	url = {https://www.esaim-cocv.org/articles/cocv/abs/2003/01/cocv248/cocv248.html},
+	doi = {10.1051/cocv:2002070},
+	abstract = {We present, analyze, and implement a new method for the design of the stiffest structure subject to a pressure load or a given field of internal forces. Our structure is represented as a subset {\textless}i{\textgreater}S{\textless}i/{\textgreater} of a reference domain, and the complement of {\textless}i{\textgreater}S{\textless}i/{\textgreater} is made of two other “phases”, the “void” and a fictitious “liquid” that exerts a pressure force on its interface with the solid structure. The problem we consider is to minimize the compliance of the structure {\textless}i{\textgreater}S{\textless}i/{\textgreater}, which is the total work of the pressure and internal forces at the equilibrium displacement. In order to prevent from homogenization we add a penalization on the perimeter of {\textless}i{\textgreater}S{\textless}i/{\textgreater}. We propose an approximation of our problem in the framework of {\textless}i{\textgreater}Γ{\textless}i/{\textgreater}-convergence, based on an approximation of our three phases by a smooth phase-field. We detail the numerical implementation of the approximate energies and show a few experiments.},
+	pages = {19--48},
+	journaltitle = {{ESAIM}: Control, Optimisation and Calculus of Variations},
+	shortjournal = {{ESAIM}: {COCV}},
+	author = {Bourdin, Blaise and Chambolle, Antonin},
+	urldate = {2019-10-29},
+	date = {2003-01-01},
+	langid = {english},
+	file = {Full Text PDF:/home/tim/Zotero/storage/H2L86A2E/Bourdin und Chambolle - 2003 - Design-dependent loads in topology optimization.pdf:application/pdf;Snapshot:/home/tim/Zotero/storage/GMMGU8HZ/cocv248.html:text/html}
+}
+
+@online{wendland_scattered_2004,
+	title = {Scattered Data Approximation by Holger Wendland},
+	url = {/core/books/scattered-data-approximation/980EEC9DBC4CAA711D089187818135E3},
+	abstract = {Cambridge Core - Numerical Analysis and Computational Science - Scattered Data Approximation -  by Holger Wendland},
+	titleaddon = {Cambridge Core},
+	author = {Wendland, Holger},
+	urldate = {2019-10-29},
+	date = {2004-12},
+	langid = {english},
+	doi = {10.1017/CBO9780511617539},
+	file = {Snapshot:/home/tim/Zotero/storage/ERU5L4GI/980EEC9DBC4CAA711D089187818135E3.html:text/html}
+}
+
+@book{wendland_scattered_2005,
+	title = {Scattered Data Approximation},
+	volume = {17},
+	author = {Wendland, Holger},
+	date = {2005-01-01},
+	file = {Scattered-Data-Approximation.pdf:/home/tim/Zotero/storage/CMB8SWIW/Scattered-Data-Approximation.pdf:application/pdf}
+}
+
+@online{noauthor_radial_nodate,
+	title = {Radial basis functions: Theory and implementations},
+	url = {https://www.researchgate.net/publication/268313327_Radial_basis_functions_Theory_and_implementations},
+	urldate = {2019-10-30},
+	file = {Radial basis functions\: Theory and implementations:/home/tim/Zotero/storage/5DUJKG4D/268313327_Radial_basis_functions_Theory_and_implementations.html:text/html}
+}
+
+@online{noauthor_radial_nodate-1,
+	title = {Radial Basis Functions: Theory and Implementations - Martin D. Buhmann - Google Books},
+	url = {https://books.google.de/books/about/Radial_Basis_Functions.html?id=TRMf53opzlsC&redir_esc=y},
+	urldate = {2019-10-30},
+	file = {Radial Basis Functions\: Theory and Implementations - Martin D. Buhmann - Google Books:/home/tim/Zotero/storage/UT59FJ7A/Radial_Basis_Functions.html:text/html}
+}
+
+@book{buhmann_radial_2003,
+	location = {New York, {NY}, {USA}},
+	title = {Radial Basis Functions},
+	isbn = {978-0-521-63338-3},
+	abstract = {From the Publisher:"In many areas of mathematics, science and engineering, from computer graphics to inverse methods to signal processing it is necessary to estimate parameters, usually multidimensional, by approximation and interpolation. Radial basis functions are a modern and powerful tool which work well in very general circumstances, and so are becoming of widespread use, as the limitations of other methods, such as least squares, polynomial interpolation or wavelet-based, become apparent." This is the first book devoted to the subject and the author's aim is to give a thorough treatment from both the theoretical and practical implementation viewpoints. For example, he emphasises the many positive features of radial basis functions such as the unique solvability of the interpolation problem, the computation of interpolants, their smoothness and convergence, and provides a careful classification of the radial basis functions into types that have different convergence. A comprehensive bibliography rounds off what will prove a very valuable work.},
+	publisher = {Cambridge University Press},
+	author = {Buhmann, Martin D.},
+	date = {2003},
+	file = {Buhmann - Radial Basis Functions Theory and Implementations.pdf:/home/tim/Zotero/storage/YCKWE2B2/Buhmann - Radial Basis Functions Theory and Implementations.pdf:application/pdf}
 }
