--- a/source/references.bib
+++ b/source/references.bib
@@ -360,3 +360,13 @@ The resulting flows are given by Allen-Cahn and Cahn-Hilliard type dynamics coup
 	date = {2003},
 	file = {Buhmann - Radial Basis Functions Theory and Implementations.pdf:/home/tim/Zotero/storage/YCKWE2B2/Buhmann - Radial Basis Functions Theory and Implementations.pdf:application/pdf}
 }
+
+@article{bossen_pliant_1998,
+	title = {A Pliant Method for Anisotropic Mesh Generation},
+	abstract = {A new algorithm for the generation of anisotropic, unstructured triangular meshes in two dimensions is described. Inputs to the algorithm are the boundary geometry and a metric that specifies the desired element size and shape as a function of position. The algorithm is an example of what we call pliant mesh generation. Itfirstconstructs the constrained Delaunay triangulation of the domain, then iteratively smooths, refines, and retriangulates. On each iteration, a node is selected at random, it is repositioned according to attraction/repulsion with its neighbors, the neighborhood is retriangulated, and nodes are inserted or deleted as necessary. All operations are done relative to the metric tensor. This simple method generates high quality meshes whose elements conform well to the requested shape metric. The method appears particularly well suited to surface meshing and viscous flow simulations, where stretched triangles are desirable, and to time-dependent remeshing problems. Keywords: unstructured mesh, Delaunay triangulation, element size function, Riemannian metric tensor, smoothing. 1},
+	journaltitle = {Proceedings of the 5th International Meshing Roundtable},
+	shortjournal = {Proceedings of the 5th International Meshing Roundtable},
+	author = {Bossen, Frank and Heckbert, Paul},
+	date = {1998-10-08},
+	file = {Full Text PDF:/home/tim/Zotero/storage/2FLLJTNA/Bossen und Heckbert - 1998 - A Pliant Method for Anisotropic Mesh Generation.pdf:application/pdf}
+}
